# poker-solver

./: .dockerignore  CMakeLists.txt  Dockerfile.dev  Makefile  README.md  conanfile.py  diff.txt
.github/workflows/: cpp-build-and-test.yml
benchmarking/: benchmarking.cpp  poker_solver_benchmarking.cpp
src/: main.cpp
src/cards/: Card.cpp  Card.hpp  Deck.cpp  Deck.hpp
src/common/: TypeAliases.hpp
src/game/: BettingRound.cpp  BettingRound.hpp  HandEvaluator.cpp  HandEvaluator.hpp  InputHelper.cpp  InputHelper.hpp  PokerGame.cpp  PokerGame.hpp
src/mccfr/: Actions.hpp  InfoSet.hpp  MCCFR.cpp  MCCFR.hpp  MCCFRState.hpp  Node.cpp  Node.hpp
src/players/: Agent.cpp  Agent.hpp  Bot.cpp  Bot.hpp  Player.cpp  Player.hpp
src/util/: InputHelper.hpp
src/utils/: InputHelper.cpp  InputHelper.hpp  table_gen.py
tests/: test_hand_evaluator.cpp
tests/unit/: test_card.cpp  test_deck.cpp  test_hand_evaluator.cpp  test_mccfr.cpp  test_player.cpp
